<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonRajshahi"
        android:text="@string/button_Rajshahi"
        android:layout_width="167dp"
        android:layout_height="189dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textSize="19dp"
        android:textStyle="bold"
        android:drawableTop="@drawable/rajshahi"
        android:textColor="@color/colorGreen"
        android:background="@color/colorMistyrose"
        />


    <Button
        android:id="@+id/buttonBarishal"
        android:text="@string/button_Barishal"
        android:layout_width="185dp"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:textSize="19dp"
        android:textStyle="bold"
        android:background="@color/colorMistyrose"
        android:textColor="@color/colorGreen"
        android:drawableTop="@drawable/barishal"

        />

    <Button
        android:id="@+id/buttonRangpur"
        android:text="@string/button_Rangpur"
        android:layout_width="167dp"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textSize="19dp"
        android:textStyle="bold"
        android:textColor="@color/colorGreen"
        android:background="@color/colorMistyrose"
        android:drawableTop="@drawable/rangpur"
        />

    <Button
        android:id="@+id/buttonSylhet"
        android:text="@string/button_Sylhet"
        android:layout_width="185dp"
        android:layout_height="184dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:textSize="19dp"
        android:textStyle="bold"
        android:textColor="@color/colorGreen"
        android:background="@color/colorMistyrose"
        android:drawableTop="@drawable/sylhet"
        />

    <Button
        android:id="@+id/buttonChittagong"
        android:text="@string/button_Chittagong"
        android:textColor="@color/colorGreen"
        android:background="@color/colorMistyrose"
        android:layout_width="167dp"
        android:layout_height="187dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:textSize="19dp"
        android:textStyle="bold"
        android:drawableTop="@drawable/chittagong"
        />

    <Button
        android:id="@+id/buttonDhaka"
        android:text="@string/button_Dhaka"
        android:layout_width="185dp"
        android:layout_height="189dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:textSize="19dp"
        android:textStyle="bold"
        android:textColor="@color/colorGreen"
        android:background="@color/colorMistyrose"
        android:drawableTop="@drawable/dhaka"
        />

</RelativeLayout>