<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EyeDoctor5">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_EarD2"
        android:textSize="32dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="105dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="54dp"
        android:text="@string/Eye_Doctor5_Degree"
        android:textSize="20dp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    </ScrollView>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="387dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/Eye_Doctor5_Text"
        android:textSize="25dp"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="20dp" />

    <Button
        android:id="@+id/Location"
        android:layout_width="290dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:text="Location" />


</RelativeLayout>